Git integrartion issue fix 14
